sfdx-source/force-app/main/default/objects/Interface_Transaction_Configuration__mdt/Interface_Transaction_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>LEM-13778: It stores the configuration details related to each internal processes utilising interface transaction records.</description>
    <label>Interface Transaction Configuration</label>
    <pluralLabel>Interface Transaction Configurations</pluralLabel>
</CustomObject>