sfdx-source/force-app/main/default/objects/Interface_Transaction_Configuration__mdt/fields/Enable_Logging__c.field-meta.xml
<CustomField>
    <fullName>Enable_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-13378: It indicates whether error logging is enabled for the current process</description>
    <label>Enable Logging</label>
    <type>Checkbox</type>
</CustomField>