sfdx-source/force-app/main/default/objects/Interface_Transaction_Configuration__mdt/fields/Enable_Retry__c.field-meta.xml
<CustomField>
    <fullName>Enable_Retry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-13778: It indicates whether retry is enabled for failed interface transactions related to the current process.</description>
    <label>Enable Retry</label>
    <type>Checkbox</type>
</CustomField>