sfdx-source/force-app/main/default/objects/Interface_Transaction_Configuration__mdt/fields/Interface_Transaction_Name__c.field-meta.xml
<CustomField>
    <fullName>Interface_Transaction_Name__c</fullName>
    <description>LEM-13778: It stores the transaction process name used in Interface Transaction record for identifying related configuration details.</description>
    <label>Interface Transaction Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>