sfdx-source/force-app/main/default/objects/Interface_Transaction_Configuration__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-13506: It indicates whether the Interface Transaction Configuration record is active.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>