sfdx-source/force-app/main/default/objects/Interface_Transaction_Configuration__mdt/fields/Retry_Limit__c.field-meta.xml
<CustomField>
    <fullName>Retry_Limit__c</fullName>
    <description>LEM-13778: It stores the total retry limit for the failed interface transaction records related to current process.</description>
    <label>Retry Limit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>