sfdx-source/force-app/main/default/objects/Interface_Transaction_Configuration__mdt/fields/Service_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Class_Name__c</fullName>
    <description>LEM-13378: It stores the service class name where the custom logic exists.</description>
    <label>Service Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>